public/stylesheets/modifiers/sass/_crm-panel.scss
@import url('https://fonts.googleapis.com/css2?family=Exo+2:wght@500&display=swap');
.energy-panel-wrapper {
    min-height: 100vh;
    width: 100vw;
    overflow: hidden;
    background: $basic-background;
    font-family: $content-font;
    #loginUser,
    #chatName {
        display: none;
    }
    .chat-users {
        display: none;
        position: fixed;
        top: 200px;
        right: 0px;    
        flex-direction: column;

        @media (min-width: 800px){
            display: flex;
        }
        &__photo {
            box-sizing: content-box;
            max-width: 50px;
            border-radius: 50%;
            margin-top: 10px;
            &--active {
                border: 3px solid yellowgreen;
            }
        }
    }

    &__title {
        color: $heading-color;
        font-family: $title-font;
        text-align: center;
        padding: 10px;
        background: $login-color;

        @include mq('small') {
            font-size: 30px;
        }
    }

    &__subtitle {
        color: $heading-color;
        font-family: $title-font;
        text-align: center;
        padding: 10px;

        @include mq('small') {
            font-size: 21px;
        }

        .user-settings {
            padding-left: 10px;
            cursor: pointer;
        }
    }
}

.logout-energy-btn {
    position: fixed;
    top: 6px;
    right: 7px;
    z-index: 5;
    @include btn-logout;

    @include mq('small') {
        position: unset;
        width: 100vw;
        border-radius: 0px;
    }
}

.chat-container__hide {
    display: none;
}

.user-settings-container {
    display: none;
    justify-content: space-around;
    align-items: center;
    flex-direction: column;
    position: fixed;
    @include center;
    width: 300px;
    height: 350px;
    background-color: $basic-background;
    @include main-border;
    border-radius: 10px;
    padding: 10px;

    &__close {
        position: absolute;
        top: -16px;
        right: -16px;
        font-size: 30px;
        color: rgba(225, 52, 52, 0.702);
        cursor: pointer;
    }

    &__title {
        font-family: $title-font;
        text-align: center;
        color: $heading-color;
    }

    &__btn {
        height: 50px;
        width: 200px;
        @include main-border;
        background-color: transparent;
        border-radius: 10px;
        color: $heading-color;
        font-family: $content-font;
        cursor: pointer;
    }

    .change-data-password,
    .change-data-email,
    .change-data-phone {
        display: none;
        flex-direction: column;
        justify-content: space-evenly;
        align-items: center;
        position: absolute;
        height: 300px;
        @include center;
        background: $basic-background;
        @include main-border;
        padding: 20px;

        &__description {
            display: block;
            text-align: center;
            font-family: $content-font;
            font-size: 20px;
            color: $heading-color;
        }

        &__close {
            @include close-sign(-8px, -14px)
        }

        &__response {
            font-family: $content-font;
            font-size: 20px;
            color: yellowgreen;
            padding: none;
        }

    }


}

.clients-wrapper {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;

    .clients-table {
        display: none;
        color: $heading-color;
        font-family: Arial, Helvetica, sans-serif;
        font-weight: bolder;
        text-align: center;

        tr td:nth-child(1) {
            color: rgb(65, 126, 218);
            cursor: pointer;
            border-color: $heading-color;
        }

        tr td:nth-child(2) {
            text-align: left;
        }

        tr {
            padding: 10px;
            border: 1px solid;

            th {
                padding: 10px;
            }

            td {
                padding: 5px;
                border: 1px solid;
            }
        }
    }



}

.wallet-summary {
    text-align: center;
    font-family: $content-font;
    font-size: 20px;
    color: $heading-color
}

// spinner początek
.lds-roller {
    display: inline-block;
    position: relative;
    width: 80px;
    height: 80px;
}

.lds-roller div {
    animation: lds-roller 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
    transform-origin: 40px 40px;
}

.lds-roller div:after {
    content: " ";
    display: block;
    position: absolute;
    width: 7px;
    height: 7px;
    border-radius: 50%;
    background: #fff;
    margin: -4px 0 0 -4px;
}

.lds-roller div:nth-child(1) {
    animation-delay: -0.036s;
}

.lds-roller div:nth-child(1):after {
    top: 63px;
    left: 63px;
}

.lds-roller div:nth-child(2) {
    animation-delay: -0.072s;
}

.lds-roller div:nth-child(2):after {
    top: 68px;
    left: 56px;
}

.lds-roller div:nth-child(3) {
    animation-delay: -0.108s;
}

.lds-roller div:nth-child(3):after {
    top: 71px;
    left: 48px;
}

.lds-roller div:nth-child(4) {
    animation-delay: -0.144s;
}

.lds-roller div:nth-child(4):after {
    top: 72px;
    left: 40px;
}

.lds-roller div:nth-child(5) {
    animation-delay: -0.18s;
}

.lds-roller div:nth-child(5):after {
    top: 71px;
    left: 32px;
}

.lds-roller div:nth-child(6) {
    animation-delay: -0.216s;
}

.lds-roller div:nth-child(6):after {
    top: 68px;
    left: 24px;
}

.lds-roller div:nth-child(7) {
    animation-delay: -0.252s;
}

.lds-roller div:nth-child(7):after {
    top: 63px;
    left: 17px;
}

.lds-roller div:nth-child(8) {
    animation-delay: -0.288s;
}

.lds-roller div:nth-child(8):after {
    top: 56px;
    left: 12px;
}

@keyframes lds-roller {
    0% {
        transform: rotate(0deg);
    }

    100% {
        transform: rotate(360deg);
    }
}
/* ... */

